--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <div class="gallery">
                         <img src="pic1.png" alt="Gallery Image 1">
                         <img src="pic2.png" alt="Gallery Image 2">
-                        <img src="pic3.jpg" alt="Gallery Image 3">
+                        <img src="pic3.JPG" alt="Gallery Image 3">
                         <img src="pic4.JPG" alt="Gallery Image 4">
                     </div>                                                                                          
                 </section>                                                                                           
@@ -467,10 +467,10 @@
                 <section class="content-section">
                     <h2>Featured Content</h2>
                     <div class="gallery">
-                        <textarea id="featured-text" rows="6" placeholder="I hope you thought my website was interesting and cool" style="width: 100%; border-radius: 15px;"></textarea>
+                        <textarea id="featured-text" rows="6" placeholder="I hope you thought my website was interesting and cool!" style="width: 100%; border-radius: 15px;"></textarea>
                     </div>
                     <p style="margin-top: 20px; text-align: center; color: #666;">
-                        <em>Check out my latest video tutorial on web development!</em>
+                        <em></em>
                     </p>
                 </section>
             </div>
@@ -481,7 +481,7 @@
                 <div class="footer-content">
                     <div class="footer-section">
                         <h3>Samuel Hamm</h3>
-                        <p>Creating web experiences</p>
+                        <p>Playing Roblox</p>
                     </div>
                     <div class="footer-section">
                         <h3>Quick Links</h3>
@@ -496,7 +496,7 @@
                         <h3>Connect</h3>
                         <ul style="list-style: none;">
                             <li><a href="https://github.com" target="_blank">GitHub</a></li>
-                            <li><a href="https://twitter.com" target="_blank">My Website</a></li>
+                            <li><a href=" target="_blank">My Website</a></li>
                         </ul>
                     </div>
                 </div>
